@@ -1,3 +1,7 @@
+Aug 22 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
+
+	* runall.bat (join2): Add test.
+
 Aug 19 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
 	* join2.c: New test.
